--- a/CSV.TcHmiXplanar/TcHmiXplanar/TcHmiXplanarControl/Template.html
+++ b/CSV.TcHmiXplanar/TcHmiXplanar/TcHmiXplanarControl/Template.html
@@ -1,4 +1,20 @@
 ﻿<!-- Html template-->
 <div class="TcHmi_Controls_TcHmiXplanar_TcHmiXplanarControl-Template tchmi-box">
+    <!-- Html host -->
+    <div id="TcHmiHtmlHost_Xplanar"
+         data-tchmi-type="TcHmi.Controls.System.TcHmiHtmlHost"
+         data-tchmi-height="1920"
+         data-tchmi-height-unit="px"
+         data-tchmi-left="0"
+         data-tchmi-left-unit="px"
+         data-tchmi-top="0"
+         data-tchmi-top-unit="px"
+         data-tchmi-width="1920"
+         data-tchmi-width-unit="px"
+         data-tchmi-zindex="200">
+
+        <!-- Canvas -->
+        <canvas id="canvas_Xplanar" width="1920" height="1080" style="width: 100%; height: 100%"></canvas>
+    </div>
 
 </div>
