Added combobox and draw of track works now. No scaling implemented.

--- a/CSV.TcHmiXplanar/TcHmiXplanar/TcHmiXplanarControl/Template.html
+++ b/CSV.TcHmiXplanar/TcHmiXplanar/TcHmiXplanarControl/Template.html
@@ -3,18 +3,18 @@
     <!-- Html host -->
     <div id="TcHmiHtmlHost_Xplanar"
          data-tchmi-type="TcHmi.Controls.System.TcHmiHtmlHost"
-         data-tchmi-height="1920"
-         data-tchmi-height-unit="px"
+         data-tchmi-height="100"
+         data-tchmi-height-unit="%"
          data-tchmi-left="0"
-         data-tchmi-left-unit="px"
+         data-tchmi-left-unit="%"
          data-tchmi-top="0"
-         data-tchmi-top-unit="px"
-         data-tchmi-width="1920"
-         data-tchmi-width-unit="px"
+         data-tchmi-top-unit="%"
+         data-tchmi-width="100"
+         data-tchmi-width-unit="%"
          data-tchmi-zindex="200">
 
         <!-- Canvas -->
-        <canvas id="canvas_Xplanar" width="1920" height="1080" style="width: 100%; height: 100%"></canvas>
+        <canvas id="canvas"></canvas>
     </div>
 
 </div>
